Fix z-index bug on placePhoneCall context menu

--- a/timeo-webfrontend/src/main/webapp/styles/timeo_cockpit.css
+++ b/timeo-webfrontend/src/main/webapp/styles/timeo_cockpit.css
@@ -96,6 +96,7 @@ div.phoneCallDialogVisible {
     width: 255px;
     background-color: tan;
     padding: 4px;
+    z-index: 20;
 }
 
 li.taskCoverFlowListItem {
